corrected loss CrossEntropy

--- a/train.ipynb
+++ b/train.ipynb
@@ -61,13 +61,13 @@
     "\n",
     "def muti_ce_loss_fusion(d0, d1, d2, d3, d4, d5, d6, labels_v):\n",
     "\n",
-    "\tloss0 = ce_loss(d0,labels_v)\n",
-    "\tloss1 = ce_loss(d1,labels_v)\n",
-    "\tloss2 = ce_loss(d2,labels_v)\n",
-    "\tloss3 = ce_loss(d3,labels_v)\n",
-    "\tloss4 = ce_loss(d4,labels_v)\n",
-    "\tloss5 = ce_loss(d5,labels_v)\n",
-    "\tloss6 = ce_loss(d6,labels_v)\n",
+    "\tloss0 = ce_loss(d0,torch.argmax(labels_v, dim=1))\n",
+    "\tloss1 = ce_loss(d1,torch.argmax(labels_v, dim=1))\n",
+    "\tloss2 = ce_loss(d2,torch.argmax(labels_v, dim=1))\n",
+    "\tloss3 = ce_loss(d3,torch.argmax(labels_v, dim=1))\n",
+    "\tloss4 = ce_loss(d4,torch.argmax(labels_v, dim=1))\n",
+    "\tloss5 = ce_loss(d5,torch.argmax(labels_v, dim=1))\n",
+    "\tloss6 = ce_loss(d6,torch.argmax(labels_v, dim=1))\n",
     "\n",
     "\tloss = loss0 + loss1 + loss2 + loss3 + loss4 + loss5 + loss6\n",
     "\tprint(\"l0: %3f, l1: %3f, l2: %3f, l3: %3f, l4: %3f, l5: %3f, l6: %3f\\n\"%(loss0.data.item(),loss1.data.item(),loss2.data.item(),loss3.data.item(),loss4.data.item(),loss5.data.item(),loss6.data.item()))\n",
