--- a/train.ipynb
+++ b/train.ipynb
@@ -120,7 +120,8 @@
     "\tfor i in range(1,len(bbb)):\n",
     "\t\timidx = imidx + \".\" + bbb[i]\n",
     "\n",
-    "\ttra_lbl_name_list.append(data_dir + tra_label_dir + imidx + label_ext)\n",
+    "\ttra_lbl_name_list.append(data_dir + tra_label_dir + imidx + \n",
+    "  )\n",
     "\n",
     "print(\"---\")\n",
     "print(\"train images: \", len(tra_img_name_list))\n",
