--- a/utils.ipynb
+++ b/utils.ipynb
@@ -1375,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "ec22aafb",
    "metadata": {},
    "outputs": [
@@ -1413,8 +1413,8 @@
     "\n",
     "\n",
     "salobj_dataset = SemanticSalObjDataset(\n",
-    "  img_name_list=test_img_list[:10],\n",
-    "  lbl_name_list=test_lbl_list[:10],\n",
+    "  img_name_list=test_img_list,\n",
+    "  lbl_name_list=test_lbl_list,\n",
     "  transform=transforms.Compose([\n",
     "    RescaleT(320),\n",
     "    RandomCrop(288),\n",
