--- a/utils.ipynb
+++ b/utils.ipynb
@@ -1745,7 +1745,241 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1ca0340",
+   "id": "93df6889",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a8cce36",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a7f1c32",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "890c3530",
+   "metadata": {},
+   "source": [
+    "## Evaluation metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "58055cd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold 0: mean iou = 0.8140, std = 0.2351\n",
+      "Fold 1: mean iou = 0.8091, std = 0.2353\n",
+      "Fold 2: mean iou = 0.8229, std = 0.2274\n",
+      "Fold 3: mean iou = 0.8138, std = 0.2351\n",
+      "Fold 4: mean iou = 0.7914, std = 0.2464\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os \n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "metric_folder = 'metrics/'\n",
+    "metrics = {}\n",
+    "\n",
+    "for i in range(5):\n",
+    "  metrics[i] = pd.read_csv(metric_folder+f'model_real{i}/wound.csv', index_col=0)\n",
+    "\n",
+    "\n",
+    "for k in metrics:\n",
+    "  # Remove rows where all columns from index 2 onwards are 1\n",
+    "  mask = ~(metrics[k].iloc[:, 1:].eq(1).all(axis=1))\n",
+    "  filtered_metrics = metrics[k][mask]\n",
+    "  mean_precision = filtered_metrics['iou'].mean()\n",
+    "  std_precision = filtered_metrics['iou'].std()\n",
+    "  print(f\"Fold {k}: mean iou = {mean_precision:.4f}, std = {std_precision:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "b84bc144",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>dice</th>\n",
+       "      <th>iou</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.999939</td>\n",
+       "      <td>0.999939</td>\n",
+       "      <td>0.999904</td>\n",
+       "      <td>0.999939</td>\n",
+       "      <td>0.999879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.999893</td>\n",
+       "      <td>0.999862</td>\n",
+       "      <td>0.999807</td>\n",
+       "      <td>0.999878</td>\n",
+       "      <td>0.999756</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.999700</td>\n",
+       "      <td>0.999515</td>\n",
+       "      <td>0.999590</td>\n",
+       "      <td>0.999607</td>\n",
+       "      <td>0.999215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.999810</td>\n",
+       "      <td>0.999641</td>\n",
+       "      <td>0.999687</td>\n",
+       "      <td>0.999725</td>\n",
+       "      <td>0.999451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.999366</td>\n",
+       "      <td>0.998971</td>\n",
+       "      <td>0.999494</td>\n",
+       "      <td>0.999168</td>\n",
+       "      <td>0.998338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4540</th>\n",
+       "      <td>0.999881</td>\n",
+       "      <td>0.999762</td>\n",
+       "      <td>0.999711</td>\n",
+       "      <td>0.999821</td>\n",
+       "      <td>0.999643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4541</th>\n",
+       "      <td>0.999755</td>\n",
+       "      <td>0.997999</td>\n",
+       "      <td>0.998228</td>\n",
+       "      <td>0.998877</td>\n",
+       "      <td>0.997756</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4542</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4543</th>\n",
+       "      <td>0.999596</td>\n",
+       "      <td>0.999486</td>\n",
+       "      <td>0.999699</td>\n",
+       "      <td>0.999541</td>\n",
+       "      <td>0.999082</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4544</th>\n",
+       "      <td>0.999884</td>\n",
+       "      <td>0.999840</td>\n",
+       "      <td>0.999771</td>\n",
+       "      <td>0.999862</td>\n",
+       "      <td>0.999725</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4545 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      precision    recall  accuracy      dice       iou\n",
+       "0      0.999939  0.999939  0.999904  0.999939  0.999879\n",
+       "1      0.999893  0.999862  0.999807  0.999878  0.999756\n",
+       "2      0.999700  0.999515  0.999590  0.999607  0.999215\n",
+       "3      0.999810  0.999641  0.999687  0.999725  0.999451\n",
+       "4      0.999366  0.998971  0.999494  0.999168  0.998338\n",
+       "...         ...       ...       ...       ...       ...\n",
+       "4540   0.999881  0.999762  0.999711  0.999821  0.999643\n",
+       "4541   0.999755  0.997999  0.998228  0.998877  0.997756\n",
+       "4542   1.000000  1.000000  1.000000  1.000000  1.000000\n",
+       "4543   0.999596  0.999486  0.999699  0.999541  0.999082\n",
+       "4544   0.999884  0.999840  0.999771  0.999862  0.999725\n",
+       "\n",
+       "[4545 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics[k].iloc[:, 1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a060821c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80137a33",
    "metadata": {},
    "outputs": [],
    "source": []
