--- a/train.ipynb
+++ b/train.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cb98c18c",
+   "id": "fdccbdc2",
    "metadata": {},
    "source": [
-    "# 0. Importing modules"
+    "# 0 - Importing modules"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88887971",
+   "id": "f666e97b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,7 @@
     "import torch.optim as optim\n",
     "import torchvision.transforms as standard_transforms\n",
     "\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
     "import glob\n",
     "import os\n",
@@ -44,20 +45,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8af282e9",
+   "id": "7e1349c1",
    "metadata": {},
    "source": [
-    "# 1. Define loss function"
+    "# 1 - Loss function"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b74a129c",
+   "id": "8ec0d363",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ce_loss = nn.CrossEntropyLoss(size_average=True)\n",
+    "\n",
+    "# ------- 1. define loss function --------\n",
+    "\n",
+    "ce_loss = nn.CrossEntropyLoss(reduction='mean')\n",
     "\n",
     "def muti_ce_loss_fusion(d0, d1, d2, d3, d4, d5, d6, labels_v):\n",
     "\n",
@@ -72,56 +76,47 @@
     "\tloss = loss0 + loss1 + loss2 + loss3 + loss4 + loss5 + loss6\n",
     "\tprint(\"l0: %3f, l1: %3f, l2: %3f, l3: %3f, l4: %3f, l5: %3f, l6: %3f\\n\"%(loss0.data.item(),loss1.data.item(),loss2.data.item(),loss3.data.item(),loss4.data.item(),loss5.data.item(),loss6.data.item()))\n",
     "\n",
-    "\treturn loss0, loss\n"
+    "\treturn loss0, loss\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fb4d4389",
+   "id": "18ec1965",
    "metadata": {},
    "source": [
-    "# 2. Set the directory of training dataset"
+    "# 2 - Getting the paths to training directories and dataset definition"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92df7dcc",
+   "id": "c2eeae22",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "model_name = 'u2net' #'u2netp'\n",
+    "# ------- 2. set the directory of training dataset --------\n",
     "\n",
-    "data_dir = os.path.join(os.getcwd(), 'train_data' + os.sep)\n",
-    "tra_image_dir = os.path.join('wounds' + os.sep)\n",
-    "tra_label_dir = os.path.join('semantic_masks' + os.sep)\n",
+    "print('TRAINING WITH SYNTH IMAGES!')\n",
     "\n",
-    "image_ext = '.png'\n",
-    "label_ext = '.png'\n",
     "\n",
-    "model_dir = os.path.join(os.getcwd(), 'saved_models', model_name + os.sep)\n",
-    "\n",
-    "epoch_num = 5000\n",
     "batch_size_train = 4\n",
-    "batch_size_val = 1\n",
-    "train_num = 0\n",
-    "val_num = 0\n",
     "\n",
-    "tra_img_name_list = glob.glob(data_dir + tra_image_dir + '*' + image_ext)\n",
+    "\n",
+    "tra_img_name_list = glob.glob('train_data_synthetic/wounds/' + '*.png')\n",
     "\n",
     "tra_lbl_name_list = []\n",
     "for img_path in tra_img_name_list:\n",
-    "\timg_name = img_path.split(os.sep)[-1]\n",
+    "    img_name = img_path.split('/')[-1]\n",
     "\n",
-    "\taaa = img_name.split(\".\")\n",
-    "\tbbb = aaa[0:-1]\n",
-    "\timidx = bbb[0]\n",
-    "\tfor i in range(1,len(bbb)):\n",
-    "\t\timidx = imidx + \".\" + bbb[i]\n",
+    "    aaa = img_name.split(\".\")\n",
+    "    bbb = aaa[0:-1]\n",
+    "    imidx = bbb[0]\n",
+    "    for k in range(1,len(bbb)):\n",
+    "        imidx = imidx + \".\" + bbb[k]\n",
     "\n",
-    "\ttra_lbl_name_list.append(data_dir + tra_label_dir + imidx + \n",
-    "  )\n",
+    "    tra_lbl_name_list.append('train_data_synthetic/semantic_masks/' + imidx + label_ext)\n",
     "\n",
     "print(\"---\")\n",
     "print(\"train images: \", len(tra_img_name_list))\n",
@@ -129,6 +124,10 @@
     "print(\"---\")\n",
     "\n",
     "train_num = len(tra_img_name_list)\n",
+    "\n",
+    "image_ext = '.png'\n",
+    "label_ext = '.png'\n",
+    "\n",
     "\n",
     "salobj_dataset = SemanticSalObjDataset(\n",
     "    img_name_list=tra_img_name_list,\n",
@@ -138,25 +137,35 @@
     "        RandomCrop(288),\n",
     "        ToTensorLab(flag=0)]))\n",
     "\n",
-    "salobj_dataloader = DataLoader(salobj_dataset, batch_size=batch_size_train, shuffle=True)#, num_workers=1)\n"
+    "salobj_dataloader = DataLoader(salobj_dataset, batch_size=batch_size_train, shuffle=True, num_workers=1)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f44afae0",
+   "id": "33abddaa",
    "metadata": {},
    "source": [
-    "# 3. Define model"
+    "# 3 - Training loop"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "655d21c7",
+   "id": "833a226d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "epoch_num = 100\n",
     "\n",
+    "### Training with synthetic images\n",
+    "\n",
+    "print('TRAINING WITH SYNTH IMAGES!')\n",
+    "\n",
+    "model_name = 'u2net' #'u2netp'\n",
+    "\n",
+    "# ------- 3. define model --------\n",
     "# define the net\n",
     "if(model_name=='u2net'):\n",
     "    net = SU2NET(in_ch=3, out_ch=4)\n",
@@ -164,57 +173,26 @@
     "    net = SU2NETP(in_ch=3, out_ch=4)\n",
     "\n",
     "if torch.cuda.is_available():\n",
-    "    net.cuda()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "379e24a9",
-   "metadata": {},
-   "source": [
-    "# 4. Define optimizer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb725051",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    net.cuda()\n",
     "\n",
+    "# ------- 4. define optimizer --------\n",
     "print(\"---define optimizer...\")\n",
     "optimizer = optim.Adam(net.parameters(), lr=0.0004, betas=(0.9, 0.999), eps=1e-08, weight_decay=1e-5)\n",
-    "scheduler = torch.optim.lr_scheduler.LinearLR(optimizer=optimizer, start_factor=1, end_factor=1/10, total_iters=50)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f98606c1",
-   "metadata": {},
-   "source": [
-    "# 5. Training process"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95369d59",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#scheduler = torch.optim.lr_scheduler.LinearLR(optimizer=optimizer, start_factor=1, end_factor=1/10, total_iters=50)\n",
     "\n",
+    "# ------- 5. training process --------\n",
     "print(\"---start training...\")\n",
     "ite_num = 0\n",
     "running_loss = 0.0\n",
     "running_tar_loss = 0.0\n",
     "ite_num4val = 0\n",
-    "save_frq = 5000 # save the model every 2000 iterations\n",
+    "save_frq = 10\n",
+    "lossi = []\n",
     "\n",
     "for epoch in range(0, epoch_num):\n",
     "    net.train()\n",
     "\n",
-    "    for i, data in enumerate(salobj_dataloader):\n",
+    "    for k, data in enumerate(salobj_dataloader):\n",
     "        ite_num = ite_num + 1\n",
     "        ite_num4val = ite_num4val + 1\n",
     "\n",
@@ -239,31 +217,35 @@
     "\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "        scheduler.step()\n",
+    "        #scheduler.step()\n",
     "\n",
     "        # # print statistics\n",
     "        running_loss += loss.data.item()\n",
     "        running_tar_loss += loss2.data.item()\n",
+    "        lossi.append(loss.item())\n",
     "\n",
     "        # del temporary outputs and loss\n",
     "        del d0, d1, d2, d3, d4, d5, d6, loss2, loss\n",
+    "    \n",
+    "    \n",
+    "        print(\"[train synthetic, epoch: %3d/%3d, batch: %5d/%5d, ite: %d] train loss: %3f, tar: %3f \" % (\n",
+    "        epoch + 1, epoch_num, (k + 1) * batch_size_train, train_num, ite_num, running_loss / ite_num4val, running_tar_loss / ite_num4val))\n",
+    "    \n",
+    "    os.makedirs('saved_models/u2net_synth_full/',exist_ok=True)\n",
+    "    if (epoch+1) % save_frq == 0:\n",
+    "        torch.save(net.state_dict(), 'saved_models/u2net_synth_full/' + model_name + \"_bce_itr_%d_train_%3f_tar_%3f.pth\" % (epoch+1, running_loss / ite_num4val, running_tar_loss / ite_num4val))\n",
+    "        running_loss = 0.0\n",
+    "        running_tar_loss = 0.0\n",
+    "        net.train()  # resume train\n",
+    "        ite_num4val = 0\n",
     "\n",
-    "        print(\"[epoch: %3d/%3d, batch: %5d/%5d, ite: %d] train loss: %3f, tar: %3f \" % (\n",
-    "        epoch + 1, epoch_num, (i + 1) * batch_size_train, train_num, ite_num, running_loss / ite_num4val, running_tar_loss / ite_num4val))\n",
-    "\n",
-    "        if ite_num % save_frq == 0:\n",
-    "\n",
-    "            torch.save(net.state_dict(), model_dir + model_name+\"_bce_itr_%d_train_%3f_tar_%3f.pth\" % (ite_num, running_loss / ite_num4val, running_tar_loss / ite_num4val))\n",
-    "            running_loss = 0.0\n",
-    "            running_tar_loss = 0.0\n",
-    "            net.train()  # resume train\n",
-    "            ite_num4val = 0\n"
+    "pd.DataFrame(lossi).to_csv('saved_models/u2net_synth_full/'+'lossi.csv')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "614b650c",
+   "id": "5b22d364",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -271,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "673ff5b9",
+   "id": "5b8af3db",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -279,7 +261,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f666e97b",
+   "id": "8d4a643b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6f62cab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f217efcd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a492771",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -294,8 +300,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
